...
                            <mask key="subviews">
                                <include reference="CSr-m6-X4D"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" id="tPm-4G-QoK">
                        <barButtonItem key="rightBarButtonItem" title="Add" id="XEI-iA-btT">
                            <connections>
                                <action selector="addName:" destination="vXZ-lx-hvc" id="935-d6-pkp"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
